--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,15 @@
-<div class="container">
-        Length validation enabled:
-        <input type="checkbox" [checked]="lengthValidationEnabled" (change)="lengthValidationEnabled = !lengthValidationEnabled"
-        />
-        <br/>
-        <!--#ci1 -->
-        <custom-input [label]="customForm.firstName.label" [(customText)]="customForm.firstName.value" [validationRule]="customForm.firstName.customRule"
-            [required]="true">
-        </custom-input>
-        <!--#ci2 -->
-        <custom-input [label]="customForm.lastName.label" [(customText)]="customForm.lastName.value" [validationRule]="customForm.lastName.customRule"
-            [required]="true">
-        </custom-input>
-        <field-input [validationProperty]="customForm.nickName">
-        </field-input>
-        <br/>
-        <div style="display: block;">
-            <custom-dropdown></custom-dropdown>
-        </div>
-        <br/>
-        <button type="submit" class="btn btn-outline-primary" (click)="submit()">Submit</button>
-        <!-- ci1.forceValidation(); ci2.forceValidation() -->
+<div class="col-md-6">
+    <custom-input [label]="customForm.firstName.label" [(customText)]="customForm.firstName.value" [validationRule]="customForm.firstName.customRule"
+        [required]="true">
+    </custom-input>
+    <custom-input [label]="customForm.lastName.label" [(customText)]="customForm.lastName.value" [validationRule]="customForm.lastName.customRule"
+        [required]="true">
+    </custom-input>
+    <field-input [validationProperty]="customForm.nickName"> </field-input>
+    <custom-dropdown [label]="customForm.favoritSerial.label" [required]="true"></custom-dropdown>
+    <br/>
+    <button type="submit" class="btn btn-outline-primary" (click)="submit()">Submit</button>    
+    <h4 style="margin-top:20px">Options</h4>
+    - Length validation for First name enabled:
+    <input type="checkbox" [checked]="lengthValidationEnabled" (change)="lengthValidationEnabled = !lengthValidationEnabled"/>
 </div>
