--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,36 @@
-<div class="col-md-6">
-    <custom-input [label]="customForm.firstName.label" [(customText)]="customForm.firstName.value" [validationRule]="customForm.firstName.customRule"
-        [required]="true">
-    </custom-input>
-    <custom-input [label]="customForm.lastName.label" [(customText)]="customForm.lastName.value" [validationRule]="customForm.lastName.customRule"
-        [required]="true">
-    </custom-input>
-    <field-input [validationProperty]="customForm.nickName"> </field-input>
-    <custom-dropdown [label]="customForm.favoritSerial.label" [required]="true"></custom-dropdown>
-    <br/>
-    <button type="submit" class="btn btn-outline-primary" (click)="submit()">Submit</button>    
-    <h4 style="margin-top:20px">Options</h4>
-    - Length validation for First name enabled:
-    <input type="checkbox" [checked]="lengthValidationEnabled" (change)="lengthValidationEnabled = !lengthValidationEnabled"/>
+<div class="col-md-12">
+    <div class="row">
+        <div class="col-6">
+            <custom-input [label]="customForm.firstName.label" [(customText)]="customForm.firstName.value" [validationRule]="customForm.firstName.customRule"
+            [required]="true">
+            </custom-input>
+        </div>
+        <div class="col-6">
+            <custom-input [label]="customForm.lastName.label" [(customText)]="customForm.lastName.value" [validationRule]="customForm.lastName.customRule"
+            [required]="true">
+            </custom-input>
+        </div>
+        <div class="col-6">
+            <custom-input [label]="customForm.occupation.label" [(customText)]="customForm.occupation.value" [validationRule]="customForm.occupation.customRule"
+            [required]="true">
+            </custom-input>
+        </div>
+        <div class="col-6">
+            <field-input [validationProperty]="customForm.nickName"> </field-input>
+        </div>
+        <div class="col-12">
+            <custom-dropdown [disabled]='customForm.favoritSerial.disabled' [label]="customForm.favoritSerial.label" [required]="true"></custom-dropdown>
+            <br/>
+            <button type="submit" class="btn btn-outline-primary" (click)="submit()">Submit</button>
+            <span>{{submitMessage}}</span>
+            <h4 style="margin-top:20px">Options</h4>
+            
+            <input type="checkbox" [checked]="lengthValidationEnabled" (change)="lengthValidationEnabled = !lengthValidationEnabled"/>
+            <label for="">Length validation for First name enabled</label>
+            <br>
+            <input type="checkbox" [checked]="customForm.nickName.disabled" (change)="status()"/>
+            <label for="">Enable/Disable Input </label> 
+        </div>
+       
+    </div>
 </div>
